--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,7 @@ if (flutterVersionName == null) {
 }
 
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
@@ -37,10 +38,9 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.thepcosnutritionist.thepcosprotocol_app"
-        minSdkVersion 16
-        targetSdkVersion 29
+        applicationId "com.thepcosnutritionist.app"
+        minSdkVersion 22
+        targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
@@ -52,6 +52,27 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    flavorDimensions "app"
+
+    productFlavors {
+        dev {
+            dimension "app"
+            resValue "string", "app_name", "The PCOS Protocol - Dev"
+            versionNameSuffix "-dev"
+            applicationId "com.thepcosnutritionist.app.dev"
+        }
+        staging {
+            dimension "app"
+            resValue "string", "app_name", "The PCOS Protocol - Staging"
+            versionNameSuffix "-staging"
+                applicationId "com.thepcosnutritionist.app.staging"
+        }
+        prod {
+            dimension "app"
+            resValue "string", "app_name", "The PCOS Protocol"
+        }
+    }
 }
 
 flutter {
@@ -60,4 +81,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation platform('com.google.firebase:firebase-bom:26.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
 }
