--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # arch -x86_64 pod install  (also the first time run this to fix ffi: sudo arch -x86_64 gem install ffi
   cupertino_icons: ^1.0.0
   firebase_analytics: ^6.2.0
+  device_info: ^1.0.0
 
 dev_dependencies:
   flutter_test:
