--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_analytics: ^6.2.0
   device_info: ^1.0.0
+  firebase_crashlytics: ^0.2.3+1
 
 dev_dependencies:
   flutter_test:
