--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_analytics: ^6.2.0
   device_info: ^1.0.0
   firebase_crashlytics: ^0.2.3+1
+  onesignal_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
