--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -58,6 +58,9 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [
+                'appAuthRedirectScheme': 'com.thepcosnutritionist.app'
+        ]
     }
 
     buildTypes {
