--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -43,5 +43,16 @@
 	<false/>
 	<key>CFBundleDisplayName</key>
     <string>$(APP_DISPLAY_NAME)</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+         <key>CFBundleTypeRole</key>
+         <string>Editor</string>
+         <key>CFBundleURLSchemes</key>
+         <array>
+            <string>com.thepcosnutritionist.app</string>
+         </array>
+      </dict>
+    </array>
 </dict>
 </plist>
