--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   firebase_crashlytics: ^0.2.3+1
   onesignal_flutter: ^2.0.0
   package_info: ^0.4.3+2
+  http: ^0.12.2
+  flutter_appauth: ^0.9.2+6
+  flutter_secure_storage: ^3.3.5
 
 dev_dependencies:
   flutter_test:
@@ -51,8 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
