--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^3.3.5
   flushbar: ^1.10.4
   url_launcher: ^5.7.10
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
