Added layout for Coach Chat, and a few other fixes. Plus added dependency for Speech_bubble, and added Card to other main screens. Also added validation to sign in screen.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flushbar: ^1.10.4
   url_launcher: ^5.7.10
   shared_preferences: ^0.5.12+4
+  speech_bubble: ^0.0.7
 
 dev_dependencies:
   flutter_test:
