--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^5.7.10
   shared_preferences: ^0.5.12+4
   speech_bubble: ^0.0.7
+  provider: ^4.3.2+3
 
 dev_dependencies:
   flutter_test:
