--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^0.5.12+4
   speech_bubble: ^0.0.7
   provider: ^4.3.2+3
+  flutter_html: ^1.1.0
+  transparent_image: ^1.0.0
 
 dev_dependencies:
   flutter_test:
