Added Chewie video player and created Course screen to display video. Also moved card header to widget file for reuse.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   provider: ^4.3.2+3
   flutter_html: ^1.1.0
   transparent_image: ^1.0.0
+  video_player: ^1.0.1
+  chewie: ^0.12.1+1
 
 dev_dependencies:
   flutter_test:
