--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   transparent_image: ^1.0.0
   video_player: ^1.0.1
   chewie: ^0.12.1+1
+  email_validator: ^1.0.6
 
 dev_dependencies:
   flutter_test:
