--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   video_player: ^1.0.1
   chewie: ^0.12.1+1
   email_validator: ^1.0.6
+  connectivity: ^2.0.2
 
 dev_dependencies:
   flutter_test:
