--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   chewie: ^0.12.1+1
   email_validator: ^1.0.6
   connectivity: ^2.0.2
+  sqflite: ^1.3.0
+  path_provider: ^1.6.27
 
 dev_dependencies:
   flutter_test:
