--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   connectivity: ^2.0.2
   sqflite: ^1.3.0
   path_provider: ^1.6.27
+  intercom_flutter: ^2.3.3
 
 dev_dependencies:
   flutter_test:
