--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 2.1.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -49,6 +49,7 @@ dependencies:
   sqflite: ^1.3.0
   path_provider: ^1.6.27
   intercom_flutter: ^2.3.3
+  launch_review: ^2.0.0
 
 dev_dependencies:
   flutter_test:
