--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   intercom_flutter: ^2.3.3
   launch_review: ^2.0.0
   carousel_slider: ^3.0.0
+  flutter_local_notifications: ^4.0.1+1
+  rxdart: ^0.24.0
 
 dev_dependencies:
   flutter_test:
