--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   flutter_local_notifications: ^4.0.1+1
   rxdart: ^0.24.0
   flutter_native_timezone: ^1.0.4
+  notification_permissions: ^0.4.8
 
 dev_dependencies:
   flutter_test:
