--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/
-  #   - images/a_dot_ham.jpeg
+
+  fonts:
+    - family: Courgette
+      fonts:
+        - asset: fonts/Courgette-Regular.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
