--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_native_timezone: ^1.0.4
   notification_permissions: ^0.4.8
   health: ^3.0.3
+  avatar_glow: ^2.0.0
 
 dev_dependencies:
   flutter_test:
