--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+9
+version: 1.0.0+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -28,29 +28,31 @@ dependencies:
 
   # If running on an M1 based Macbook, you will need to do pod install manually in Terminal with this command:
   # arch -x86_64 pod install  (also the first time run this to fix ffi: sudo arch -x86_64 gem install ffi
-  firebase_analytics: ^6.2.0
-  device_info: ^1.0.0
-  firebase_crashlytics: ^0.2.3+1
+  # Also note, when updating dependencies, you may need to increase the minimum platform at the top of the ios/Podfile
+  # and then in Terminal run flutter clean and cd to ios folder and run pod update
+  firebase_analytics: ^7.1.1
+  firebase_crashlytics: ^2.0.0
+  url_launcher: ^6.0.3
+  flutter_local_notifications: ^5.0.0+1
+  path_provider: ^2.0.1
+  shared_preferences: ^2.0.5
+  device_info: ^2.0.0
+  connectivity: ^3.0.3
   onesignal_flutter: ^2.0.0
   package_info: ^0.4.3+2
   http: ^0.12.2
   flutter_secure_storage: ^3.3.5
   flushbar: ^1.10.4
-  url_launcher: ^5.7.10
-  shared_preferences: ^0.5.12+4
   provider: ^4.3.2+3
   flutter_html: ^1.1.0
   transparent_image: ^1.0.0
   video_player: ^1.0.1
   chewie: ^0.12.1+1
   email_validator: ^1.0.6
-  connectivity: ^2.0.2
   sqflite: ^1.3.0
-  path_provider: ^1.6.27
   intercom_flutter: ^2.3.3
   launch_review: ^2.0.0
   carousel_slider: ^3.0.0
-  flutter_local_notifications: ^4.0.1+1
   rxdart: ^0.24.0
   flutter_native_timezone: ^1.0.4
   notification_permissions: ^0.4.8
