--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+11
+version: 1.0.0+12
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -42,7 +42,7 @@ dependencies:
   package_info: ^0.4.3+2
   http: ^0.12.2
   flutter_secure_storage: ^3.3.5
-  flushbar: ^1.10.4
+  another_flushbar: ^1.10.5
   provider: ^4.3.2+3
   flutter_html: ^1.1.0
   transparent_image: ^1.0.0
