--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,10 +42,10 @@ dependencies:
   flutter_secure_storage: ^3.3.5
   another_flushbar: ^1.10.5
   provider: ^4.3.2+3
-  flutter_html: ^1.1.0
+  html: ^0.15.0
   transparent_image: ^1.0.0
   video_player: ^1.0.1
-  chewie: ^0.12.1+1
+  better_player: ^0.0.64
   email_validator: ^1.0.6
   sqflite: ^1.3.0
   intercom_flutter: ^2.3.3
