--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   native_pdf_view: ^4.0.1
   full_screen_image: ^1.0.2
   image_downloader: ^0.30.0
+  multi_select_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_test:
