--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,35 +28,37 @@ dependencies:
   # arch -x86_64 pod install  (also the first time run this to fix ffi: sudo arch -x86_64 gem install ffi
   # Also note, when updating dependencies, you may need to increase the minimum platform at the top of the ios/Podfile
   # and then in Terminal run flutter clean and cd to ios folder and run pod update
-  firebase_analytics: ^7.1.1
-  firebase_crashlytics: ^2.0.0
+  firebase_analytics: ^9.1.1
+  firebase_crashlytics: ^2.6.0
   url_launcher: ^6.0.3
-  flutter_local_notifications: ^5.0.0+1
+  flutter_local_notifications: ^9.4.0
   path_provider: ^2.0.1
   shared_preferences: ^2.0.5
   device_info: ^2.0.0
   connectivity: ^3.0.3
-  onesignal_flutter: ^2.0.0
-  package_info: ^0.4.3+2
+  onesignal_flutter: ^3.3.0
+  package_info: ^2.0.2
   http: ^0.13.0
-  flutter_secure_storage: ^3.3.5
+  flutter_secure_storage: ^5.0.2
   another_flushbar: ^1.10.5
-  provider: ^4.3.2+3
-  flutter_widget_from_html: ^0.6.0
-  transparent_image: ^1.0.0
+  provider: ^6.0.2
+  flutter_widget_from_html: ^0.8.5
+  transparent_image: ^2.0.0
   better_player: ^0.0.60
-  email_validator: ^1.0.6
+  email_validator: ^2.0.1
   sqflite: ^2.0.0+3
-  intercom_flutter: ^2.3.3
-  launch_review: ^2.0.0
+  intercom_flutter: ^6.2.0
+  launch_review: ^3.0.1
   carousel_slider: ^4.0.0
-  flutter_native_timezone: ^1.0.4
-  notification_permissions: ^0.4.8
+  flutter_native_timezone: ^2.0.0
+  notification_permissions: ^0.6.1
   avatar_glow: ^2.0.0
+  native_pdf_view: ^6.0.0+1
   full_screen_image: ^1.0.2
-  image_downloader: ^0.30.0
+  image_downloader: ^0.31.0
   multi_select_flutter: ^4.0.0
-  webview_flutter: ^2.0.8
+  webview_flutter: ^3.0.1
+  pigeon: ^2.0.3
 
 dev_dependencies:
   integration_test:
