--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -55,7 +55,7 @@ android {
     defaultConfig {
         applicationId "com.thepcosnutritionist.app"
         minSdkVersion 22
-        targetSdkVersion 30
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         manifestPlaceholders = [
@@ -102,6 +102,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
 }
 
 apply plugin: 'com.google.firebase.crashlytics'
