--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: thepcosprotocol_app
-description: The PCOS Protocol App.
+description: Ovie.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
