--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,19 +76,19 @@ android {
     productFlavors {
         dev {
             dimension "app"
-            resValue "string", "app_name", "The PCOS Protocol - Dev"
+            resValue "string", "app_name", "Ovie - Dev"
             versionNameSuffix "-dev"
             applicationId "com.thepcosnutritionist.app.dev"
         }
         staging {
             dimension "app"
-            resValue "string", "app_name", "The PCOS Protocol - Staging"
+            resValue "string", "app_name", "Ovie - Staging"
             versionNameSuffix "-staging"
                 applicationId "com.thepcosnutritionist.app.staging"
         }
         prod {
             dimension "app"
-            resValue "string", "app_name", "The PCOS Protocol"
+            resValue "string", "app_name", "Ovie"
         }
     }
 }
