animate transition from why widget in dashboard to why settings page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   webview_flutter: ^3.0.4
   audioplayers: ^1.0.1
   full_screen_image_null_safe: ^2.0.0
+  animations: ^2.0.0
 
 dev_dependencies:
   integration_test:
