Refactor codes around parts of Dashboard
- call the populateMember() of memeberProvider right away in app.dart
   - so that data will be available already in dashboard. Can't put it in dashboard level hierarchy
since we will also need the data in profile settings (when getting and changing the preferred display
name)

- we create a dashboard_member_time_provider.dart
   - just so that we remove logic in the DashboardMemberTime widget
   - this is not yet working. wip

- use PropertyChangeNotifier instead of ChangeNotifier
   - so that widgets will only listen and rebuild to changes to particular attributes
   - for now we are only particular with the loading status attribute change

- we create a preferences_provider.dart
   - this will hold isShowYourWhy, isShowLessonRecipes, isUsernameUsed
   - This will be used in Dashboard and Profile Settings/Preferences widgets and now they will share it
for single source of truth and let the framework update/build the widget accordingly

   - as result of preferences_provider.dart we remove passing of showYourWhy, showLessonReicpes,
isUsernameUsed in the dashboard_layout.dart. We use Provider/Consumer instead in dashboard_layout.dart

   - as result of preferences_provider.dart we also remove passing of showLessonRecipes in
dashboard_lesson_carousel.dart.

   - as result of preferences_provider.dart we remove passing of isUsernameUsed in
dashboard_member_time.dart. we also get the display name from preference provider now and logic of
which name to display is now there in the provider.

- in dashboard_lesson_carousel.dart:
   - remove passing of modulesProvider and instead use Provider.of(...)
   - for now, loading status logic is removed. Will create widget that holds Loading Status Overlay. On
build method we remove returning of different widget based on loading status

- removed the LoadOverlay() in lesson_page.dart for now (will create widget that holds load overlay
that can be used by widgets)

- we remove memberProvider

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   audioplayers: ^1.0.1
   full_screen_image_null_safe: ^2.0.0
   animations: ^2.0.0
+  property_change_notifier: ^0.3.0
 
 dev_dependencies:
   integration_test:
