--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -6,7 +6,7 @@
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.puttiapps.ovie.OneSignalNotificationServiceExtension</string>
+		<string>group.com.thepcosnutritionist.ovie.onesignal</string>
 	</array>
 </dict>
 </plist>
