--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   dart_code_metrics: ^4.16.0
+  intl_utils: ^2.1.0
 
 flutter:
   uses-material-design: true
