--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ version: 1.1.0+56
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=2.10.5"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -29,30 +29,30 @@ dependencies:
   # arch -x86_64 pod install  (also the first time run this to fix ffi: sudo arch -x86_64 gem install ffi
   # Also note, when updating dependencies, you may need to increase the minimum platform at the top of the ios/Podfile
   # and then in Terminal run flutter clean and cd to ios folder and run pod update
-  firebase_core: ^1.19.2
-  firebase_analytics: ^9.2.0
-  firebase_crashlytics: ^2.8.5
+  firebase_core: ^1.22.0
+  firebase_analytics: ^9.3.5
+  firebase_crashlytics: ^2.8.10
   url_launcher: ^6.1.5
-  flutter_local_notifications: ^9.7.1
+  flutter_local_notifications: ^11.0.0
   shared_preferences: ^2.0.15
-  device_info_plus: ^4.0.0
+  device_info_plus: ^4.1.2
   connectivity: ^3.0.6
-  onesignal_flutter: ^3.3.2
+  onesignal_flutter: ^3.4.1
   package_info: ^2.0.2
-  http: ^0.13.4
-  flutter_secure_storage: ^5.0.2
+  http: ^0.13.5
+  flutter_secure_storage: ^6.0.0
   provider: ^6.0.3
   flutter_widget_from_html_core: ^0.8.5+3
   fwfh_text_style: ^2.22.08+1
-  better_player: ^0.0.82
-  sqflite: ^2.0.2+1
-  intercom_flutter: ^7.3.0
+  better_player: ^0.0.83
+  sqflite: ^2.0.3+1
+  intercom_flutter: ^7.4.0
   launch_review: ^3.0.1
   notification_permissions: ^0.6.1
   webview_flutter: ^3.0.4
   audioplayers: ^1.0.1
   full_screen_image_null_safe: ^2.0.0
-  animations: ^2.0.0
+  animations: ^2.0.4
   flutter_native_timezone: ^2.0.0
   rxdart: ^0.27.5
 
@@ -61,13 +61,13 @@ dev_dependencies:
     sdk: flutter
   flutter_test:
     sdk: flutter
-  mockito: 5.2.0
-  build_runner: 2.2.0
+  mockito: ^5.3.1
+  build_runner: ^2.2.1
   sqflite_common_ffi: ^2.1.1+1
   flutter_driver:
     sdk: flutter
-  dart_code_metrics: ^4.16.0
-  intl_utils: ^2.1.0
+  dart_code_metrics: ^4.18.3
+  intl_utils: ^2.7.0
 
 flutter:
   uses-material-design: true
