--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,10 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   provider: ^6.0.3
   flutter_widget_from_html_core: ^0.8.5+3
+  flutter_inappwebview: 5.4.4+3
   fwfh_text_style: ^2.22.08+1
   better_player: ^0.0.83
   sqflite: ^2.0.3+1
-  intercom_flutter: ^7.4.0
   launch_review: ^3.0.1
   notification_permissions: ^0.6.1
   webview_flutter: ^3.0.4
@@ -55,6 +55,9 @@ dependencies:
   animations: ^2.0.4
   flutter_native_timezone: ^2.0.0
   rxdart: ^0.27.5
+
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.1
 
 dev_dependencies:
   integration_test:
@@ -75,6 +78,7 @@ flutter:
   assets:
   - assets/
   - assets/images/
+  - assets/html/
 
   fonts:
     - family: Courgette
