Issue JWT token to show verified user on Zendesk console
The JWT token (that includes username and `external_id`) allows the
Zendesk admins to know who the user is in a chat session.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   rxdart: ^0.27.5
   auto_size_text: ^3.0.0
+  dart_jsonwebtoken: ^2.6.3
 
 dependency_overrides:
   firebase_core_platform_interface: 4.5.1
