(wip) play video from assets

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -106,7 +106,7 @@ android {
             dimension "app"
             resValue "string", "app_name", "Ovie - Dev"
             versionNameSuffix "-dev"
-            applicationId "com.thepcosnutritionist.ovie.dev"
+            applicationId "com.thepcosnutritionist.app"
         }
         prod {
             dimension "app"
