--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   auto_size_text: ^3.0.0
   dart_jsonwebtoken: ^2.6.3
   html_unescape: ^2.0.0
+  stream_feed: ^0.6.0+2
+  timeago: ^3.0.2
 
 dependency_overrides:
   firebase_core_platform_interface: 4.5.1
