--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -84,5 +84,18 @@
 	<true/>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleTypeRole</key>
+            <string>Editor</string>
+            <key>CFBundleURLName</key>
+            <string>open</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>ovieapp</string>
+            </array>
+        </dict>
+    </array>
 </dict>
 </plist>
