--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   html_unescape: ^2.0.0
   stream_feed: ^0.6.0+2
   timeago: ^3.0.2
+  jwt_decoder: ^2.0.1
 
 dependency_overrides:
   firebase_core_platform_interface: 4.5.1
