--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,15 @@ dependencies:
   timeago: ^3.0.2
   easy_image_viewer: ^1.2.1
 
+
+# PeriodTracker Dependencies:
+  screenshot: ^1.3.0
+  emojis: ^0.9.9
+  fl_chart: ^0.62.0
+  image_gallery_saver: ^2.0.3
+  dio: 4.0.1
+  converter: ^0.3.6
+
 dependency_overrides:
   firebase_core_platform_interface: 4.5.1
 
